--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <packaging>jar</packaging>
     <version>1-SNAPSHOT</version>
     <name>SCRUD</name>
-    <url>http://maven.apache.org</url>
 
     <repositories>
         <repository>
@@ -18,9 +17,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.0.1</version>
             <scope>test</scope>
         </dependency>
 
@@ -42,4 +41,16 @@
             <version>10.8.1.2</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>         
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
